--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group = 'ru.netology'
+group = 'ru.netology.selenida'
 version = '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
@@ -15,8 +15,8 @@ repositories {
 
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    testImplementation 'com.codeborne:selenide:6.19.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    testImplementation 'com.codeborne:selenide:6.17.2'
 
 }
 
