--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,8 +10,7 @@ build: off  # будем использовать свой скрипт сбор
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
-  - java -jar ./artifacts/app-card-delivery.jar &
-  - chmod +x gradlew
+  - java -jar ./artifacts/app-card-delivery.jar
 
 build_script:
   - ./gradlew test -Dselenide.headless=true
