--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,4 +13,7 @@ install:
   - java -jar ./artifacts/app-card-delivery.jar
 
 build_script:
-  - ./gradlew test -Dselenide.headless=true
+  - ./gradlew test --info -Dselenide.headless=true
+
+
+    
